--- a/host_vars/files.yml
+++ b/host_vars/files.yml
@@ -1,9 +1,14 @@
-# Overrides settings within group_vars/all.yml
+# Common Overrides
+hostname: "files"
+fqdn: "{{ hostname }}.{{ domain }}"
+user_password: "{{ lookup('bitwarden_field', 'hash', 'files_linux_user_password') }}"
+
+# Nebula Configurations
 nebula_sign_enable: true
-nebula_sign_profile: "files.{{ domain }}"
+nebula_sign_profile: "{{ fqdn }}"
 nebula_inbound_rules:
 
-  - port: 22
+  - port: "{{ ssh_port }}"
     proto: tcp
     group: acl:admin
 
@@ -15,6 +20,7 @@ nebula_inbound_rules:
     proto: tcp
     group: acl:nextcloud
 
+# Service Configurations
 service_linux_accounts:
   - name: "nc"
     uid: 1502
@@ -36,4 +42,4 @@ data_mounts:
 
 # Certificate Signing Request Section
 csr_cn: "Nextcloud"
-svc_domain: "files.{{ domain }}"
+svc_domain: "{{ fqdn }}"
