--- a/host_vars/warden.yml
+++ b/host_vars/warden.yml
@@ -1,10 +1,15 @@
-# Overrides settings within group_vars/all.yml
+# Common Overrides
+hostname: "warden"
+fqdn: "{{ hostname }}.{{ domain }}"
+user_password: "{{ lookup('bitwarden_field', 'hash', 'warden_linux_user_password') }}"
+
+# Nebula Configurations
 nebula_sign_enable: true
-nebula_sign_profile: "warden.{{ domain }}"
+nebula_sign_profile: "{{ fqdn }}"
 nebula_install_dir: "TBD"
 nebula_inbound_rules:
 
-  - port: 22
+  - port: "{{ ssh_port }}"
     proto: tcp
     group: acl:admin
 
@@ -20,6 +25,7 @@ nebula_inbound_rules:
     proto: tcp
     group: acl:bitwarden
 
+# Service Configurations
 service_linux_accounts:
   - name: "bw"
     uid: 1500
@@ -35,4 +41,4 @@ data_mounts:
 
 # Certificate Signing Request Section
 csr_cn: "Bitwarden"
-svc_domain: "warden.{{ domain }}"
+svc_domain: "{{ fqdn }}"
