--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -16,5 +16,9 @@
     group: "{{ user }}"
     mode: '0644'
 
+- name: Configure Hostname to {{ hostname }}
+  hostname:
+    name: "{{ hostname }}"
+
 - name: Setup SSH and Fail2Ban
   import_tasks: ssh.yml
