--- a/inventory/all.yml
+++ b/inventory/all.yml
@@ -7,4 +7,5 @@ all:
     servers:
       hosts:
         files:
-          ansible_connection: local
+          ansible_host: {{ files_ip_address }}
+
