--- a/roles/configure_nextcloud/tasks/repo.yml
+++ b/roles/configure_nextcloud/tasks/repo.yml
@@ -1,3 +1,8 @@
+- name: Check if Github Access Completed
+  ansible.builtin.stat:
+    path: "/home/{{ user }}/.ssh/id_ed25519"
+  register: github_key_present
+
 - name: Downloading Github Access Key
   bitwarden_download_attachment:
     name: "GITHUB_SSH"
@@ -6,22 +11,7 @@
   no_log: true
   delegate_to: localhost
   become: false
-
-- name: Ensure .ssh directory exists for root
-  ansible.builtin.file:
-    path: "/home/root/.ssh"
-    state: directory
-    owner: "root"
-    group: "root"
-    mode: '0700'
-
-- name: Install Github Access for root
-  ansible.builtin.copy:
-    src: "./id_ed25519"
-    dest: "/home/root/.ssh/id_ed25519"
-    owner: "root"
-    group: "root"
-    mode: '0700'
+  when: not github_key_present.stat.exists
 
 - name: Ensure .ssh directory exists for {{ user }}
   ansible.builtin.file:
@@ -30,6 +20,7 @@
     owner: "{{ user }}"
     group: "{{ user }}"
     mode: '0700'
+  when: not github_key_present.stat.exists
 
 - name: Install Github Access for {{ user }}
   ansible.builtin.copy:
@@ -38,6 +29,7 @@
     owner: "{{ user }}"
     group: "{{ user }}"
     mode: '0700'
+  when: not github_key_present.stat.exists
 
 - name: Removing {{ admin_repo_dir }}
   file:
@@ -48,44 +40,32 @@
   file:
     path: "{{ admin_repo_dir }}"
     state: directory
-    owner: "root"
-    group: "root"
+    owner: "{{ user }}"
+    group: "{{ user }}"
     mode: '0700'
 
 - name: Cloning {{ admin_repo_url }} to {{ admin_repo_dir }}
   ansible.builtin.git:
     repo: "{{ admin_repo_url }}"
     dest: "{{ admin_repo_dir }}"
-    key_file: "/home/root/.ssh/id_ed25519"
+    key_file: "/home/{{ user }}/.ssh/id_ed25519"
     version: dev-1.8.0
     accept_hostkey: yes
     clone: yes
     update: yes
+  become: false
 
-- name: Transfer repo ownership to {{ user }}
-  ansible.builtin.file:
-    path: "{{ admin_repo_dir }}"
-    state: directory
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    mode: '0700'
-    recurse: yes
-
-- name: Delete private key in root account
-  file:
-    path: "/home/root/.ssh/id_ed25519"
-    state: absent
-
-- name: Delete private key on localhost
+- name: Delete private key on ansible host
   file:
     path: "./id_ed25519"
     state: absent
   delegate_to: localhost
+  become: false
 
 - name: Deploy {{ root_install_dir }}/envvars.sh
   ansible.builtin.template:
     src: "envvars.sh.j2"
     dest: "{{ root_install_dir }}/envvars.sh"
-    owner: root
+    owner: "root"
     group: "root"
     mode: '0400'
