Added BW installation with Bootstrap and IPTables support

--- a/inventory/all.yml
+++ b/inventory/all.yml
@@ -7,5 +7,5 @@ all:
     servers:
       hosts:
         files:
-        test:
-          ansible_connection: local
+          ansible_host: {{ files_ip_address }}
+
