--- a/inventory/all.yml
+++ b/inventory/all.yml
@@ -8,4 +8,6 @@ all:
       hosts:
         files:
           ansible_host: {{ files_ip_address }}
+        media:
+          ansible_host: {{ nebula_ip_address }}
 
