--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -8,7 +8,6 @@
     - name: Ensure the user {{ user }} exists
       user:
         name: "{{ user }}"
-        password: "{{ user_password }}"
         shell: "{{ user_shell }}"
         groups: sudo
         create_home: yes
@@ -36,3 +35,10 @@
         state: present
         key: "{{ item }}"
       with_items: "{{ ssh_authorized_keys }}"
+
+    - name: Setting account password for {{ user }}
+      user:
+        name: "{{ user }}"
+        password: "{{ user_password }}"
+        state: present
+
