--- a/roles/configure_nebula/tasks/host-config.yml
+++ b/roles/configure_nebula/tasks/host-config.yml
@@ -1,3 +1,15 @@
+- name: Check if {{ nebula_install_dir }}/config.yaml
+  ansible.builtin.stat:
+    path: "{{ nebula_install_dir }}/config.yaml"
+  register: host_config_stat
+
+- name: Backing up {{ nebula_install_dir }}/config.yaml
+  ansible.builtin.copy:
+    src: "{{ nebula_install_dir }}/config.yaml"
+    dest: "{{ nebula_install_dir }}/config-backup.yaml"
+  remote_src: true
+  when: host_config_stat.stat.exists
+
 - name: Deploy nebula service configuration file
   ansible.builtin.template:
     src: nebula-service-config.j2
