Updated server records and inventory files

--- a/group_vars/servers.yml
+++ b/group_vars/servers.yml
@@ -19,9 +19,12 @@ domain_ca_key_password: "{{ lookup('bitwarden_password', 'DOMAIN_CA') }}"
 
 # NFS Settings
 nfs_server_ip: "{{ nfs_server_ip_v }}"
+central_ip_address: "{{ central_ip_address_v }}"
 files_ip_address: "{{ files_ip_address_v }}"
 media_ip_address: "{{ media_ip_address_v }}"
 code_ip_address: "{{ code_ip_address_v }}"
+vpn_ip_address: "{{ vpn_ip_address_v }}"
+warden_ip_address: "{{ warden_ip_address_v }}"
 
 # Nebula
 nebula_ca_key_password: "{{ lookup('bitwarden_password', 'NEBULA_CA') }}"
