Fixed spacing issues within nebula role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path=./roles
 library=./library
-inventory=./inventory/all.yml
+inventory=./inventory/all.ini
 lookup_plugins=./lookup_plugins
 vault_password_file = ./vault-pass.sh
