--- a/host_vars/code.yml
+++ b/host_vars/code.yml
@@ -6,6 +6,7 @@ fqdn: "{{ hostname }}.{{ domain }}"
 user_password: "{{ lookup('bitwarden_field', 'hash', 'code_linux_user_password') }}"
 
 # Nebula Configurations
+nebula_service_restart: false
 nebula_sign_enable: true
 nebula_sign_profile: "{{ fqdn }}"
 nebula_install_dir: "/etc/nebula"
