--- a/roles/configure_nebula/tasks/host-config.yml
+++ b/roles/configure_nebula/tasks/host-config.yml
@@ -33,25 +33,10 @@
     path: "{{ nebula_install_dir }}/config.yaml"
     rules: "{{ nebula_inbound_rules }}"
 
-- name: Check if Nebula CA Certificate already downloaded
-  ansible.builtin.stat:
-    path: "./ca.crt"
-  register: nebula_ca_crt
-
-- name: Downloading Nebula CA Certificate
-  bitwarden_download_attachment:
-    name: "NEBULA_CA"
-    filename: "ca.crt"
-    file_path: "./ca.crt"
-  become: false
-  delegate_to: localhost
-  when: not nebula_ca_crt.stat.exists
-
 - name: Installing Nebula CA Certificate
   ansible.builtin.copy:
-    src: "./ca.crt"
+    src: "{{ playbook_dir }}/certificates/nebula/{{ cert_env }}/ca.crt"
     dest: "{{ nebula_install_dir }}/ca.crt"
     owner: "root"
     group: "{{ nebula_user }}"
     mode: "0540"
-
