Fixed problems with nebula signing

--- a/host_vars/vpn.yml
+++ b/host_vars/vpn.yml
@@ -6,10 +6,16 @@ fqdn: "{{ hostname }}.{{ domain }}"
 user_password: "{{ lookup('bitwarden_field', 'hash', 'vpn_linux_user_password') }}"
 
 # Nebula Configurations
+nebula_service_restart: false
+nebula_is_lighthouse: true
 nebula_sign_enable: true
 nebula_sign_profile: "{{ fqdn }}"
 nebula_install_dir: "/etc/nebula"
 nebula_inbound_rules:
+
+  - port: "{{ ssh_port }}"
+    proto: tcp
+    group: admin
 
   - port: "{{ ssh_port }}"
     proto: tcp
