--- a/roles/configure_nebula/tasks/sign-keys.yml
+++ b/roles/configure_nebula/tasks/sign-keys.yml
@@ -19,6 +19,13 @@
     dest: "./.nebula/{{ inventory_hostname }}-host.pub"
     flat: yes
 
+- name: Download Nebula CA files from Bitwarden
+  bitwarden_download_attachments:
+    name: "NEBULA_CA"
+    dir_path: ".nebula"
+  delegate_to: localhost
+  become: false
+
 - name: Generate devices certificate from profile
   nebula_sign:
     profile: "{{ nebula_sign_profile }}"
