--- a/inventory/all.ini
+++ b/inventory/all.ini
@@ -7,6 +7,6 @@ localhost ansible_connection=local
 central ansible_connection=local
 code ansible_host="{{ code_ip_address }}"
 files ansible_host="{{ files_ip_address }}"
-media ansible_host="{{ nebula_ip_address }}"
+media ansible_host="{{ media_ip_address }}"
 warden ansible_host="{{ warden_ip_address }}"
 vpn ansible_host="{{ vpn_ip_address }}"
