--- a/host_vars/media.yml
+++ b/host_vars/media.yml
@@ -6,6 +6,7 @@ fqdn: "{{ hostname }}.{{ domain }}"
 user_password: "{{ lookup('bitwarden_field', 'hash', 'media_linux_user_password') }}"
 
 # Nebula Configurations
+nebula_restart_service: true
 nebula_sign_enable: true
 nebula_sign_profile: "{{ fqdn }}"
 nebula_inbound_rules:
