Updates to iptables and nebula inbound policy support

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,4 @@ library=./library
 inventory=./inventory/all.ini
 lookup_plugins=./lookup_plugins
 vault_password_file = ./vault-pass.sh
+host_key_checking = False
