--- a/host_vars/vpn.yml
+++ b/host_vars/vpn.yml
@@ -20,3 +20,8 @@ nebula_inbound_rules:
   - port: "{{ ssh_port }}"
     proto: tcp
     group: acl:admin
+
+  - port: "{{ nebula_port }}"
+    proto: tcp
+    ca_sha: "{{ ca_sha }}"
+
