--- a/host_vars/vpn.yml
+++ b/host_vars/vpn.yml
@@ -13,15 +13,14 @@ nebula_sign_profile: "{{ fqdn }}"
 nebula_install_dir: "/etc/nebula"
 nebula_inbound_rules:
 
-  - port: "{{ ssh_port }}"
+  - port: "{{ ssh_port_v }}"
     proto: tcp
     group: admin
 
-  - port: "{{ ssh_port }}"
+  - port: "{{ ssh_port_v }}"
     proto: tcp
     group: acl:admin
 
-  - port: "{{ nebula_port }}"
+  - port: "{{ nebula_port_v }}"
     proto: tcp
-    ca_sha: "{{ ca_sha }}"
-
+    ca_sha: "{{ ca_sha_v }}"
