--- a/host_vars/media.yml
+++ b/host_vars/media.yml
@@ -11,11 +11,11 @@ nebula_sign_enable: true
 nebula_sign_profile: "{{ fqdn }}"
 nebula_inbound_rules:
 
-  - port: "{{ ssh_port }}"
+  - port: "{{ ssh_port_v }}"
     proto: tcp
     group: acl:admin
 
-  - port: "{{ ssh_port }}"
+  - port: "{{ ssh_port_v }}"
     proto: tcp
     group: acl:uploader
 
@@ -27,7 +27,7 @@ nebula_inbound_rules:
     proto: tcp
     group: acl:media    
 
-  - port: "{{ ssh_port }}"
+  - port: "{{ ssh_port_v }}"
     proto: tcp
     group: admin
 
