--- a/inventory/all.ini
+++ b/inventory/all.ini
@@ -1,12 +1,6 @@
-# Group for local hosts
 [local]
 localhost ansible_connection=local
 
-# Group for server hosts
 [servers]
-central ansible_connection=local
-code ansible_host="{{ code_ip_address }}"
-files ansible_host="{{ files_ip_address }}"
-media ansible_host="{{ media_ip_address }}"
+nexus ansible_host="{{ nexus_ip_address }}"
 warden ansible_host="{{ warden_ip_address }}"
-vpn ansible_host="{{ vpn_ip_address }}"
