--- a/roles/configure_nebula/tasks/sign-keys.yml
+++ b/roles/configure_nebula/tasks/sign-keys.yml
@@ -19,32 +19,11 @@
     dest: "./.nebula/{{ inventory_hostname }}-host.pub"
     flat: yes
 
-- name: Download Nebula CA files from Bitwarden
-  bitwarden_download_attachments:
-    name: "NEBULA_CA"
-    dir_path: ".nebula"
-  delegate_to: localhost
-  become: false
-
-- name: Generate devices certificate from profile
-  nebula_sign:
-    profile: "{{ nebula_sign_profile }}"
-    config: "{{ playbook_dir }}/certificates/nebula/issuance-profiles.yaml"
-    ca_key: ".nebula/ca.key"
-    ca_key_pass: "{{ nebula_ca_key_password }}"
-    ca_crt:  "{{ playbook_dir }}/certificates/nebula/{{ cert_env }}/ca.crt"
-    public:  "./.nebula/{{ inventory_hostname }}-host.pub"
-    out_crt: "{{ playbook_dir }}/certificates/nebula/{{ cert_env }}/{{ inventory_hostname }}-host.crt"
+- name: Issue device certificate for {{ nebula_sign_profile }}
+  command: npki issue device --certs_dir "{{ playbook_dir }}/certificates/nebula" --public "./.nebula/{{ inventory_hostname }}-host.pub" --cert_out ".nebula/{{ nebula_sign_profile }}.crt" "{{ nebula_sign_profile }}"
   delegate_to: localhost
   become: false
   no_log: true
-
-# - name: Upload issuance-profile to capture log
-#   bitwarden_update_attachment:
-#     name: "NEBULA_CA"
-#     file_path: ".nebula/issuance-profiles.yaml"
-#   delegate_to: localhost
-#   become: false
 
 - name: Check if {{ nebula_install_dir }}/host.crt
   ansible.builtin.stat:
@@ -60,7 +39,7 @@
 
 - name: Upload host certificate to host
   ansible.builtin.copy:
-    src: "{{ playbook_dir }}/certificates/nebula/{{ cert_env }}/{{ inventory_hostname }}-host.crt"
+    src: ".nebula/{{ nebula_sign_profile }}.crt"
     dest: "{{ nebula_install_dir }}/host.crt"
     owner: "root"
     group: "{{ nebula_user }}"
