Added let's encrypt support and vaultwarden

--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -8,6 +8,7 @@ permit_ssh_password_login: "yes"
 domain: "{{ domain_v }}"
 lan_range_cidr: "{{ lan_range_cidr_v }}"
 cert_env: "{{ lookup('bitwarden_field', 'env', 'NEBULA_CA') }}"
+lets_encrypt_dir: "/etc/letsencrypt/archive"
 
 # Nebula Section
 nebula_service_restart: false
