--- a/roles/configure_nextcloud/tasks/main.yml
+++ b/roles/configure_nextcloud/tasks/main.yml
@@ -29,10 +29,18 @@
 - name: Setup Service Secrets
   import_tasks: secrets.yml
 
-- name: Deploy {{ root_install_dir }}/envvars.sh
+- name: Ensure vars directory exists
+  file:
+    path: "{{ root_install_dir }}/vars"
+    state: directory
+    owner: "root"
+    group: "root"
+    mode: "700"
+
+- name: Deploy {{ root_install_dir }}/vars/nextcloud-envvars.sh
   ansible.builtin.template:
     src: "envvars.sh.j2"
-    dest: "{{ root_install_dir }}/envvars.sh"
+    dest: "{{ root_install_dir }}/vars/nextcloud-envvars.sh"
     owner: "root"
     group: "root"
     mode: '0400'
