--- a/roles/configure_yubikey_luks/tasks/repo.yml
+++ b/roles/configure_yubikey_luks/tasks/repo.yml
@@ -16,7 +16,7 @@
     repo: "git@github.com:clwhipp/yubikey-luks.git"
     dest: "/home/{{ user }}/yubikey-luks"
     key_file: "/home/{{ user }}/.ssh/id_ed25519"
-    version: extended-yubikey-challenge
+    version: master
     accept_hostkey: yes
     clone: yes
     update: yes
