Fixed Jellyfin transcodes bug
The jellyfin service was configured to use /mnt/transcodes
to support streaming. This directory was not being created
during system setup.

Fixes #4

--- a/roles/configure_jellyfin/defaults/main.yml
+++ b/roles/configure_jellyfin/defaults/main.yml
@@ -14,3 +14,6 @@ jellyfin_data_mounts:
   - location: "{{ data_dir }}/jellyfin"
     owner: "media"
     mode: '0700'
+  - location: "/mnt/transcodes"
+    owner: "media"
+    mode: '0700'
